plugins {
    id 'java'
}

java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(17)
    }
}
repositories {
    mavenCentral()
}

dependencies {
    implementation 'org.postgresql:postgresql:42.2.27'
}

dependencies {
    implementation 'org.postgresql:postgresql:42.2.27'
    testImplementation 'org.junit.jupiter:junit-jupiter-api:5.8.1'
    testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.8.1'
}

test {
    useJUnitPlatform()
}

tasks.named('compileJava') {
    javaCompiler = javaToolchains.compilerFor {
        languageVersion = JavaLanguageVersion.of(17)
    }
}

tasks.withType(JavaExec) {
    jvmArgs += [
            '--add-opens', 'java.base/java.lang=ALL-UNNAMED'
    ]
}